--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             'Huhu 💔'
         ];
 
-        const loveMessage = `Hì bé iuuu hong dỗi rùi nữa nì! 💕 Hơi vô tri ạ, Duydong làm cái nì một phần để em bé vui, nhìu phần để em bé thấy là vẫn lun cóa Duydong ở đây. Bé iuuu hong bao giờ cô đơn cả, nên là mình hãy suy nghĩ thoải mái nên ạ, nó vẫn lun như vậy thì sao mình phải nghĩ quá nhìu nì. Bé iuuu vui lên là càng xinh đẹp nì hihi. Iuuu em rất nhìu ạ! 💖✨`;
+        const loveMessage = `Hì bé iuuu hong dỗi rùi nữa nì! 💕 Hơi vô tri ạ, duydong làm cái nì một phần để em bé vui, nhìu phần để em bé thấy là vẫn lun cóa duydong ở đây. Bé iuuu hong bao giờ cô đơn cả, nên là mình hãy suy nghĩ thoải mái nên ạ, nó vẫn lun như vậy thì sao mình phải nghĩ quá nhìu nì. Bé iuuu vui lên là càng xinh đẹp nì hihi. Iuuu em rất nhìu ạ! ☺️🥰`;
 
         btnCoa.addEventListener('click', () => {
             coaClickCount++;
